added loader, readme, bumps, switchcases, furtheroptimizations

--- a/src/style/base/_globals.scss
+++ b/src/style/base/_globals.scss
@@ -28,3 +28,31 @@ canvas{
 .hide{
   display: none !important;
 }
+
+
+#loading-screen{
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  z-index: 10000;
+
+  display: grid;
+  place-items: center;
+
+  p{
+    color: #ffffff;
+  }
+
+  h1{
+    color: #ffffff;
+    font-size: 64px;
+  }
+
+  #loader{
+    height: 0.5rem;
+    border-radius: 0.2rem;
+    background-color:  #ffffff;
+    animation: Loading 1s forwards cubic-bezier(0.075, 0.82, 0.165, 1) ;
+  }
+}
