--- a/src/style/layout/panels/_panel-geometry.scss
+++ b/src/style/layout/panels/_panel-geometry.scss
@@ -11,7 +11,7 @@
     flex-direction: column;
     justify-content: center;
 
-    margin-bottom: 0.5rem;
+    margin-bottom: var(--small);
 
     &-selectors {
       width: 100%;
@@ -19,10 +19,12 @@
       flex-direction: row;
       justify-content: center;
       align-items: center;
-      gap: 8px;
+      gap: var(--small);
 
       select {
+        cursor: pointer;
         @include ddw-normal;
+        accent-color: var(--accent);
       }
     }
 
@@ -33,6 +35,7 @@
 
       button {
         @include button;
+        @include Clickable-v2;
 
         width: 80%;
         height: 1.5vw;
@@ -54,9 +57,8 @@
     display: flex;
     flex-direction: column;
 
-    
-    &-container {
 
+    &-container {
       @include Inner-Wrapper;
       overflow: visible;
       width: 100%;
@@ -74,8 +76,9 @@
 
     &-button {
       @include button;
+      @include Clickable-v2;
       color: var(--secondary);
-      margin-bottom: 0.5rem;
+      margin-bottom: var(--xsmall);
 
       width: 100%;
       min-height: 1.5vw;
@@ -90,7 +93,7 @@
       width: 80%;
       height: 100%;
 
-      margin-bottom: 0.5rem;
+      margin-bottom: var(--small);
 
       &-dropdown {
         @include button;
@@ -102,7 +105,7 @@
         font-weight: 700;
 
         width: 80%;
-        margin-bottom: 0.5rem;
+        margin-bottom: var(--small);
       }
 
       &-sliders {
@@ -116,25 +119,25 @@
         &-slider {
           display: flex;
           flex-direction: row;
-          align-items:center;
+          align-items: center;
           justify-content: flex-start;
 
-          margin-bottom: 0.5rem;
+          margin-bottom: var(--small);
 
           label {
-            font-size: 0.8vw;
+            font-size: var(--large);
             margin-right: 1rem;
           }
 
           .input_slider {
-            margin-right: 0.5rem;
+            margin-right: var(--small);
             width: 5.5vw;
             accent-color: var(--accent);
           }
 
           input {
-            width: 1.2vw;
-            font-size: 0.6vw;
+            width: 1.8vw;
+            font-size: var(--medium);
             background: transparent;
             border: none;
             color: var(--secondary);
