--- a/src/style/layout/panels/_panel-top.scss
+++ b/src/style/layout/panels/_panel-top.scss
@@ -8,7 +8,7 @@
     p{
       color: var(--secondary);
       text-transform: uppercase;
-      font-size: 0.8vw;
+      font-size: var(--large);
     }
   }
 
@@ -19,10 +19,14 @@
     justify-content: flex-end;
 
     svg{
-      
-      height: 1rem;
-      width: 1rem;
-      margin-right: 0.5rem;
+
+      @include Clickable;
+
+      height: var(--xlarge);
+      width: var(--xlarge);
+      margin-right: var(--small);
+      fill: var(--secondary);
+
       &:last-child{
         margin-right: 0;
       }
