screen width limiter and core folder created

--- a/src/style/layout/panels/_panel-material.scss
+++ b/src/style/layout/panels/_panel-material.scss
@@ -133,7 +133,7 @@
             align-items: center;
 
             .checkbox {
-                @include Clickable;
+                @include Clickable-v2;
                 margin-right: var(--small);
             }
 
