--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -21,4 +21,9 @@
       --medium: 0.6vw;
       --large: 0.8vw;
       --xlarge: 1vw;
+
+
+      /// Font
+      
+      --fnt-global: 'Noto Sans', sans-serif;
 }
