--- a/src/style/layout/panels/_panel-textures.scss
+++ b/src/style/layout/panels/_panel-textures.scss
@@ -8,6 +8,7 @@
     }
 
     h2{
+        font-family: var(--fnt-global);
         font-size: var(--large);
         margin-bottom: var(--small);
         color: var(--secondary);
