--- a/src/style/layout/panels/_panel-usual.scss
+++ b/src/style/layout/panels/_panel-usual.scss
@@ -1,5 +1,6 @@
 .panel-usual{
     h2{
+        font-family: var(--fnt-global);
         font-size: var(--large);
         color: var(--secondary);
     }
