--- a/src/style/base/_globals.scss
+++ b/src/style/base/_globals.scss
@@ -1,10 +1,14 @@
-html{
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+html {
   box-sizing: border-box;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: var(--fnt-global);
   font-size: 100%;
 }
 
-*,*::before,*::after{
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
@@ -14,7 +18,7 @@ html{
   display: none !important;
 }
 
-body{
+body {
   height: 100vh;
   display: grid;
   place-items: center;
@@ -22,7 +26,7 @@ body{
   overflow: hidden;
 }
 
-canvas{
+canvas {
   width: 100%;
   height: 100%;
   overflow: hidden;
