--- a/src/style/components/_loading-screen.scss
+++ b/src/style/components/_loading-screen.scss
@@ -1,26 +1,73 @@
-#loading-screen {
+.Loading {
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background-color: black;
+    background: linear-gradient(45deg, #000000, var(--primary));
+    color: var(--secondary);
     z-index: 10000;
 
     display: grid;
     place-items: center;
 
-    p {
-        color: #ffffff;
+
+    &__Title {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+
+        h1 {
+            font-family: var(--fnt-global);
+            font-size: 10vw;
+
+            span {
+                color: var(--accent);
+            }
+        }
+
+        p {
+            font-family: var(--fnt-global);
+            font-size: var(--medium);
+        }
     }
 
-    h1 {
-        color: #ffffff;
-        font-size: 64px;
-    }
+    &__Loader {
 
-    #loader {
-        height: 0.5rem;
-        border-radius: 0.2rem;
-        background-color: #ffffff;
-        animation: Loading 1s forwards cubic-bezier(0.075, 0.82, 0.165, 1);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        h2 {
+            font-family: var(--fnt-global);
+            font-size: var(--xlarge);
+        }
+
+        p {
+            font-family: var(--fnt-global);
+            font-size: var(--medium);
+
+            margin-bottom: 2rem;
+
+
+            &:last-of-type{
+                font-size: var(--large);
+
+                span{
+                    color: var(--accent);
+                }
+            }
+        }
+
+        #loader {
+            height: 2vw;
+            width: 2vw;
+
+            border-radius: 50%;
+            border: 0.5vw solid var(--secondary);
+            
+            animation: Loading 1.5s infinite
+
+        }
     }
 }
