--- a/src/style/components/_screen-limiter.scss
+++ b/src/style/components/_screen-limiter.scss
@@ -11,6 +11,7 @@
     }
 
     .mobile-layout {
+        font-family: var(--fnt-global);
         width: 100vw;
         height: 100vh;
         background-color: var(--primary);
@@ -22,6 +23,7 @@
         justify-content: center;
 
         h3 {
+            font-family: var(--fnt-global);
             font-size: 4.2vw;
             text-align: center;
             width: 80vw;
@@ -33,6 +35,7 @@
         }
 
         p {
+            font-family: var(--fnt-global);
             font-size: 3vw;
             text-align: center;
             width: 66ch;
