--- a/src/style/layout/panels/_panel-top.scss
+++ b/src/style/layout/panels/_panel-top.scss
@@ -8,6 +8,7 @@
     p{
       color: var(--secondary);
       text-transform: uppercase;
+      font-family: var(--fnt-global);
       font-size: var(--large);
     }
   }
