better script file management

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -6,8 +6,8 @@
       --secondary: #D6DAD1;
       --accent: #22a497;
       
-      --selected: #128478;
-      --selectable: #09554D;
+      --selectable: #128478;
+      --selected: #09554D;
       
       --danger-action: #71070D;
 
