--- a/src/style/layout/_layout.scss
+++ b/src/style/layout/_layout.scss
@@ -2,7 +2,7 @@
   @include Panel;
   height: 100%;
   width: 100%;
-  background-color: var(--primary);
+  background: linear-gradient(to right, #000000, var(--primary) 70%);
 
   display: flex;
   flex-direction: column;
