--- a/src/style/abstracts/_mixins.scss
+++ b/src/style/abstracts/_mixins.scss
@@ -45,6 +45,15 @@
     font-size: var(--large);
     text-align: center;
     outline: none;
+
+    &:hover {
+            box-shadow: 0px 0px 1px 2px var(--primary);
+        }
+    
+        &:active {
+            box-shadow: 0px 0px 2px 2px var(--primary) inset;
+            background-color: var(--selected);
+        }
 }
 
 @mixin Scroll-noBar {
