--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -22,6 +22,7 @@
 @import 'layout/panels/panel-options';
 @import 'layout/panels/panel-textures';
 @import 'layout/panels/panel-usual';
+@import 'layout/panels/panel-export';
 
 // @import 'components/';
 @import 'components/loading-screen';
